# Cinema-Mangement-System

./: .clangd  .gitignore  CMakeLists.txt  README.md  SaleAnalysis.c  SaleAnalysis.h  SalesAnalysis_Persist.c  SalesAnalysis_UI.c  SalesAnalysis_UI.h  SalesAnalysis_persist.h  TTMS.c  convert.py
Common/: CMakeLists.txt  List.h  common.c  common.h  listTestDrv.c  listTestDrv.h
Persistence/: Account_Persist.c  Account_Persist.h  CMakeLists.txt  EntityKey_Persist.c  EntityKey_Persist.h  Play_Persist.c  Play_Persist.h  Sale_Persist.c  Sale_Persist.h  Schedule_Persist.c  Schedule_Persist.h  Seat_Persist.c  StaSales.c  StaSales.h  StaSales_Persist.c  StaSales_Persist.h  Studio_Persist.c  Ticket.c  Ticket.h  Ticket_Persist.c  Ticket_Persist.h  schedule.c
Service/: Account.c  Account.h  CMakeLists.txt  Play.c  Play.h  Sale.c  Sale.h  SaleAnalysis.c  SaleAnalysis.h  SalesAnalysis.c  SalesAnalysis.h  Schedule.c  Schedule.h  Seat.c  Seat.h  StaSales.c  StaSales.h  Ticket.c  Ticket.h  schedule.h
View/: Account_UI.c  Account_UI.h  CMakeLists.txt  MaiAccount_UI.c  MaiAccount_UI.h  Main_Menu.c  Play.h  Play_UI.c  Play_UI.h  Sale_UI.c  Sale_UI.h  SalesAnalysis_UI.c  SalesAnalysis_UI.h  Schedule_UI.c  Schedule_UI.h  Seat_UI.c  Seat_UI.h  StaSales_UI.c  StaSales_UI.h  Studio_UI.c  Ticket.c  Ticket.h  Ticket_UI.c  Ticket_UI.h  schedule.c  schedule.h
build-warn/: .ninja_deps  .ninja_log  TTMS  build.ninja
